--- a/WildseaShaped/wildseav2.html
+++ b/WildseaShaped/wildseav2.html
@@ -1,4 +1,5 @@
 <div class="main">
+	<input type="hidden" name="attr_updated_v2" value="0">
 	<div class="header">
 		<div class="alignLeft">
 			<h1 class="sheet-title" style="text-align: left;" data-i18n="the-wildsea">THE WILDSEA</h1>
@@ -142,7 +143,9 @@
 			<div class="panel_title drives_title">
 				<h2 data-i18n="drives">DRIVES</h2>
 			</div>
-			<textarea name="attr_drives" cols="30" rows="4" class="freeform"></textarea>
+			<input type="text" name="attr_drive1" placeholder="Drive 1" spellcheck="false" class="standard_text">
+			<input type="text" name="attr_drive2" placeholder="Drive 2" spellcheck="false" class="standard_text">
+			<input type="text" name="attr_drive3" placeholder="Drive 3" spellcheck="false" class="standard_text">
 		</div>
 		<div class="mires">
 			<div class="panel_title">
