Made mires match the existing sheet

--- a/WildseaShaped/wildseav2.html
+++ b/WildseaShaped/wildseav2.html
@@ -151,15 +151,27 @@
 			<div class="panel_title">
 				<h2 data-i18n="mires">MIRES</h2>
 			</div>
-			<fieldset class="repeating_mires">
-				<div class="mires_container">
-					<input spellcheck="false" name="attr_mire_name" type="text" class="standard_text">
-					<div>
-						<input type="checkbox" name="attr_mire_track_1"><span class="double_circle"><span></span></span>
-						<input type="checkbox" name="attr_mire_track_2"><span class="double_circle"><span></span></span>
-					</div>
+			<div class="mires_container">
+				<input spellcheck="false" name="attr_mire1" type="text" class="standard_text" placeholder="Mire 1">
+				<div>
+					<input type="checkbox" name="attr_mire1Charge1"><span class="double_circle"><span></span></span>
+					<input type="checkbox" name="attr_mire1Charge2"><span class="double_circle"><span></span></span>
 				</div>
-			</fieldset>
+			</div>
+			<div class="mires_container">
+				<input spellcheck="false" name="attr_mire2" type="text" class="standard_text" placeholder="Mire 2">
+				<div>
+					<input type="checkbox" name="attr_mire2Charge1"><span class="double_circle"><span></span></span>
+					<input type="checkbox" name="attr_mire2Charge2"><span class="double_circle"><span></span></span>
+				</div>
+			</div>
+			<div class="mires_container">
+				<input spellcheck="false" name="attr_mire3" type="text" class="standard_text" placeholder="Mire 3">
+				<div>
+					<input type="checkbox" name="attr_mire3Charge1"><span class="double_circle"><span></span></span>
+					<input type="checkbox" name="attr_mire3Charge2"><span class="double_circle"><span></span></span>
+				</div>
+			</div>
 		</div>
 		<div class="edges panel-sub-outline">
 			<div class="panel_title edges_title">
