Milestones match previous sheet

--- a/WildseaShaped/wildseav2.html
+++ b/WildseaShaped/wildseav2.html
@@ -130,13 +130,17 @@
 				<div class="panel_subtitle major_title">
 					<h3 data-i18n="major">MAJOR</h3>
 				</div>
-				<textarea spellcheck="false" class="freeform" name="attr_major_milestones" cols="30" rows="2" style="width: 100%;"></textarea>
+				<fieldset class="repeating_majorMilestones">
+					<input type="text" spellcheck="false" class="standard_text" name="attr_majorMilestone" style="width: 100%;" placeholder="Major Milestone">
+				</fieldset>
 			</div>
 			<div class="minor panel-sub-outline">
 				<div class="panel_subtitle minor_title">
 					<h3 data-i18n="minor">MINOR</h3>
 				</div>
-				<textarea spellcheck="false" class="freeform" name="attr_minor_milestones" cols="30" rows="2" style="width: 100%;"></textarea>
+				<fieldset class="repeating_minorMilestones">
+					<input type="text" spellcheck="false" class="standard_text" name="attr_minorMilestone" style="width: 100%;" placeholder="Minor Milestone">
+				</fieldset>
 			</div>
 		</div>
 		<div class="drives panel-outline">
