html for temp/aspect length and showing the correct checkboxes

--- a/WildseaShaped/wildseav2.html
+++ b/WildseaShaped/wildseav2.html
@@ -556,30 +556,39 @@
 						<option value="gear" data-i18n="gear">Gear</option>
 						<option value="companion" data-i18n="companion">Companion</option>
 					</select>
-					<div class="aspect_track_blank"></div>
+					<select name="attr_aspect_length" class="aspect_length_select">
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5</option>
+						<option value="6">6</option>
+						<option value="7">7</option>
+						<option value="8">8</option>
+					</select>
 					<div class="aspect_track">
-						<div>
+						<div class="div-show-1">
 							<input type="checkbox" name="attr_aspect_track_1" class="aspect_track_1 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-2">
 							<input type="checkbox" name="attr_aspect_track_2" class="aspect_track_2 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-3">
 							<input type="checkbox" name="attr_aspect_track_3" class="aspect_track_3 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-4">
 							<input type="checkbox" name="attr_aspect_track_4" class="aspect_track_4 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-5">
 							<input type="checkbox" name="attr_aspect_track_5" class="aspect_track_5 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-6">
 							<input type="checkbox" name="attr_aspect_track_6" class="aspect_track_6 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-7">
 							<input type="checkbox" name="attr_aspect_track_7" class="aspect_track_7 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-8">
 							<input type="checkbox" name="attr_aspect_track_8" class="aspect_track_8 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
 					</div>
@@ -601,30 +610,39 @@
 						<option value="injury" data-i18n="injury">Injury</option>
 						<option value="track" data-i18n="track">Track</option>
 					</select>
-					<div class="aspect_track_blank"></div>
+					<select name="attr_temp_aspect_length" class="aspect_length_select">
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5</option>
+						<option value="6">6</option>
+						<option value="7">7</option>
+						<option value="8">8</option>
+					</select>
 					<div class="aspect_track">
-						<div>
+						<div class="div-show-1">
 							<input type="checkbox" name="attr_temp_aspect_track_1" class="temp_aspect_track_1 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-2">
 							<input type="checkbox" name="attr_temp_aspect_track_2" class="temp_aspect_track_2 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-3">
 							<input type="checkbox" name="attr_temp_aspect_track_3" class="temp_aspect_track_3 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-4">
 							<input type="checkbox" name="attr_temp_aspect_track_4" class="temp_aspect_track_4 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-5">
 							<input type="checkbox" name="attr_temp_aspect_track_5" class="temp_aspect_track_5 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-6">
 							<input type="checkbox" name="attr_temp_aspect_track_6" class="temp_aspect_track_6 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-7">
 							<input type="checkbox" name="attr_temp_aspect_track_7" class="temp_aspect_track_7 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
-						<div>
+						<div class="div-show-8">
 							<input type="checkbox" name="attr_temp_aspect_track_8" class="temp_aspect_track_8 burnable" value="1" unchecked=""><span class="double_circle"><span></span></span>
 						</div>
 					</div>
