Resources match now

--- a/WildseaShaped/wildseav2.html
+++ b/WildseaShaped/wildseav2.html
@@ -522,25 +522,37 @@
 				<div class="panel_subtitle salvage_title">
 					<h3 data-i18n="salvage">SALVAGE</h3>
 				</div>
-				<textarea spellcheck="false" name="attr_salvage" cols="30" rows="7" class="freeform"></textarea>
+				<fieldset class="repeating_salvage">
+					<input type="text" spellcheck="false" name="attr_salvageName" class="standard_text" placeholder="Salvage Name">
+					<input type="text" spellcheck="false" name="attr_salvageTags" class="standard_text" placeholder="Tags">
+				</fieldset>
 			</div>
 			<div class="specimens panel-sub-outline">
 				<div class="panel_subtitle specimens_title">
 					<h3 data-i18n="specimens">SPECIMENS</h3>
 				</div>
-				<textarea spellcheck="false" name="attr_specimens" cols="30" rows="7" class="freeform"></textarea>
+				<fieldset class="repeating_specimens">
+					<input type="text" spellcheck="false" name="attr_specimenName" class="standard_text" placeholder="Specimen Name">
+					<input type="text" spellcheck="false" name="attr_specimenTags" class="standard_text" placeholder="Tags">
+				</fieldset>
 			</div>
 			<div class="whispers panel-sub-outline">
 				<div class="panel_subtitle whispers_title">
 					<h3 data-i18n="whispers">WHISPERS</h3>
 				</div>
-				<textarea spellcheck="false" name="attr_whispers" cols="30" rows="7" class="freeform"></textarea>
+				<fieldset class="repeating_whispers">
+					<input type="text" spellcheck="false" name="attr_whisperName" class="standard_text" placeholder="Whisper Name">
+					<input type="text" spellcheck="false" name="attr_whisperTags" class="standard_text" placeholder="Tags">
+				</fieldset>
 			</div>
 			<div class="charts panel-sub-outline">
 				<div class="panel_subtitle charts_title">
 					<h3 data-i18n="charts">CHARTS</h3>
 				</div>
-				<textarea spellcheck="false" name="attr_charts" cols="30" rows="7" class="freeform"></textarea>
+				<fieldset class="repeating_charts">
+					<input type="text" spellcheck="false" name="attr_chartName" class="standard_text" placeholder="Chart Name">
+					<input type="text" spellcheck="false" name="attr_chartTags" class="standard_text" placeholder="Tags">
+				</fieldset>
 			</div>
 		</div>
 		<div class="aspects">
