Set defaults for ship stakes

--- a/WildseaShaped/wildseav2.html
+++ b/WildseaShaped/wildseav2.html
@@ -681,10 +681,10 @@
 				</div>
 				<div class="used_section">
 					<span class="standard_text" data-i18n="used">USED</span>
-					<input type="number" name="attr_ship_stake_used">
+					<input type="number" name="attr_ship_stake_used" value="0" min="0">
 				</div>
 				<div class="total_section">
-					<input type="number" name="attr_ship_stake_total">
+					<input type="number" name="attr_ship_stake_total" value="6" min="6">
 					<span class="standard_text" data-i18n="total">TOTAL</span>
 				</div>
 			</div>
